--- a/index.html
+++ b/index.html
@@ -2,33 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&family=Libre+Franklin:wght@300;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Ping coming soon page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  We are launching soon!
-
-  Subscribe and get notified
-
-  Notify Me
-
-  &copy; Copyright Ping. All rights reserved.
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+  <main>
+    <img class="logo" src="images/logo.svg" alt="" aria-hidden="true">
+    <h1>We are launching <span class="black bold">soon!</span></h1>
+    <p>Subscribe and get notified</p>
+    <form action="">
+      <label for="email"></label>
+      <input type="email" name="email" id="email" class="form-input" placeholder="Your email address...">
+      <p class="form-message error">Please provide a valid email adress</p>
+      <p class="form-message success">Form submission success !</p>
+      <button type="submit">Notify Me</button>
+    </form>
+    <img class="illustration" src="images/illustration-dashboard.png" alt="" aria-hidden="true">
+    <div class="links">
+      <a href=""><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
+      <a href=""><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
+      <a href=""><i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a>
+    </div>
+    <p class="notice">&copy; Copyright Ping. All rights reserved.</p>
+  </main>
+  <script src="https://kit.fontawesome.com/3297382b62.js" crossorigin="anonymous"></script>
+  <script src="script.js"></script>
 </body>
 </html>
