Correcting HTML and accessibility issues

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&family=Libre+Franklin:wght@300;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/3297382b62.js" crossorigin="anonymous"></script>
   <title>Frontend Mentor | Ping coming soon page</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
     <img class="logo" src="images/logo.svg" alt="" aria-hidden="true">
     <h1>We are launching <span class="black bold">soon!</span></h1>
     <p>Subscribe and get notified</p>
-    <form action="">
+    <form>
       <label for="email"></label>
       <input type="email" name="email" id="email" class="form-input" placeholder="Your email address...">
       <p class="form-message error">Please provide a valid email adress</p>
@@ -22,13 +23,12 @@
     </form>
     <img class="illustration" src="images/illustration-dashboard.png" alt="" aria-hidden="true">
     <div class="links">
-      <a href=""><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
-      <a href=""><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
-      <a href=""><i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a>
+      <a href="https://www.facebook.com/" aria-label="Facebook icon"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
+      <a href="https://twitter.com/" aria-label="Twitter icon"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
+      <a href="https://www.instagram.com/" aria-label="Instagram icon"><i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a>
     </div>
     <p class="notice">&copy; Copyright Ping. All rights reserved.</p>
   </main>
-  <script src="https://kit.fontawesome.com/3297382b62.js" crossorigin="anonymous"></script>
   <script src="script.js"></script>
 </body>
 </html>
